<resources>
    <string name="app_name">Aflo</string>

    <string name="login">Login</string>
    <string name="signup">Create an account</string>
    <string name="signup2">Sign up</string>
    <string name="or">or</string>
    <string name="guest"><u>Guest</u></string>
    <string name="continue_as">Continue as</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_login">Login using email</string>
    <string name="google">Continue with Google</string>
    <string name="facebook">Continue with Facebook</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="click_here"><u>Click Here</u></string>
    <string name="email_signup">Sign up using email</string>
    <string name="hotel">Select Your Hotel</string>
    <string name="back">Back</string>
    <string name="imageOfHotel">Image of a hotel</string>
    <string name="hotelHeader">Hotel</string>
    <string name="rating_num">4.1</string>
    <string name="hotel_price">$250/night</string>
    <string name="see_hotel_details">See Details</string>
    <string name="select">Select</string>
    <string name="api_key">AIzaSyBuWPxGFk5OVjo5Cm1xWHuuPClgK7gnP1c</string>

    <string-array name="listOfHotels">
        <item>Hotel 1</item>
        <item>Hotel 2</item>
        <item>Hotel 3</item>
        <item>Hotel 4</item>
        <item>Hotel 5</item>
        <item>Hotel 6</item>
        <item>Hotel 7</item>
        <item>Hotel 8</item>
        <item>Hotel 9</item>
        <item>Hotel 10</item>
        <item>Hotel 11</item>
    </string-array>

    <string-array name="listOfDepartingFlightTimes">
        <item>6:00AM - 12:00PM</item>
        <item>7:00AM - 1:00PM</item>
        <item>5:00AM - 6:00PM</item>
        <item>6:00AM - 12:00PM</item>
        <item>9:00PM - 6:00AM</item>
        <item>9:00PM - 6:00AM</item>
        <item>9:00PM - 6:00AM</item>
        <item>9:00PM - 6:00AM</item>
        <item>9:00PM - 6:00AM</item>
        <item>9:00PM - 6:00AM</item>
        <item>9:00PM - 6:00AM</item>
    </string-array>

    <string-array name="listOfDepartingFlightPrices">
        <item>$250</item>
        <item>$220</item>
        <item>$240</item>
        <item>$250</item>
        <item>$250</item>
        <item>$250</item>
        <item>$250</item>
        <item>$250</item>
        <item>$250</item>
        <item>$250</item>
        <item>$250</item>
    </string-array>


    <string-array name="listOfDepartingFlightStops">
        <item>Nonstop</item>
        <item>Nonstop</item>
        <item>1 Stop</item>
        <item>2 Stops</item>
        <item>Nonstop</item>
        <item>Nonstop</item>
        <item>1 Stop</item>
        <item>3 Stops</item>
        <item>Nonstop</item>
        <item>2 Stops</item>
        <item>Nonstop</item>
    </string-array>





    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aflo">Aflo</string>
    <string name="lets_get_started_with_your_budget">Lets get started with your budget!</string>
    <string name="your_budget">Your Budget?</string>
    <string name="arrow"><![CDATA[->]]></string>
    <string name="when_would_the_trip_take_place">When would the trip take place?</string>
    <string name="from">From?</string>
    <string name="to">To?</string>
    <string name="where_is_your_vacation_destination">Where is your vacation destination?</string>
    <string name="destination">Destination?</string>
    <string name="plan_your_trip">Plan your trip</string>
    <string name="recent_trips">Recent trips</string>
    <string name="account_settings">Account Settings</string>
    <string name="where_is_your_vacation_origin">What is your departure city?</string>
    <string name="origin">Departure?</string>
    <string name="visit_site">Visit in maps</string>
    <string name="title_activity_trip_complete">TripComplete</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_trip_summary">TripSummary</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading...</string>
    <string name="placeholder_date">Dec xxth, 20xx</string>
    <string name="dash">-</string>
    <string name="originS">Origin:</string>
    <string name="placeholder_text">placeholder</string>
    <string name="destinationS">Destination:</string>
    <string name="totalS">Spent:</string>
    <string name="view_summary_btn">View Summary</string>
    <string name="coming_soon">Coming soon!</string>
</resources>