<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/logoSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:text="@string/email_signup" />

        <EditText
            android:id="@+id/signupEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:autofillHints="" />

        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/signupConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/signupUsingGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/google" />

        <Button
            android:id="@+id/signupUsingFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook" />
    </LinearLayout>

    <Button
        android:id="@+id/signupSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup2" />
</LinearLayout>