<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BudgetSelection"
    android:background="#3CA1FF"
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen">

    <TextView
        android:id="@+id/AfloBudgetSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aflo"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/budgetSelectionPrompt"
        android:layout_width="252dp"
        android:layout_height="80dp"
        android:text="@string/lets_get_started_with_your_budget"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.376" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/budgetSelectionInput"
        android:layout_width="333dp"
        android:layout_height="66dp"
        android:hint="@string/your_budget"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3CA1FF"
        android:text="@string/arrow"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:onClick="toOriginSelection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727" />


</androidx.constraintlayout.widget.ConstraintLayout>