<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp">


            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/lineS"
                app:layout_constraintStart_toStartOf="@+id/linearLayout2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5">

                <TextView
                    android:id="@+id/dateAVS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_light"
                    android:text="@string/placeholder_date"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="13dp" />

                <TextView
                    android:id="@+id/date_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:fontFamily="@font/nunito_light"
                    android:text="@string/dash"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="13dp" />

                <TextView
                    android:id="@+id/dateBVS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_light"
                    android:text="@string/placeholder_date"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="13dp" />

            </LinearLayout>

            <View
                android:id="@+id/lineS"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/progress_bar_light_orange"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.29"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                app:layout_constraintVertical_bias="0.5" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/originS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_light"
                        android:paddingStart="0dp"
                        android:paddingEnd="3dp"
                        android:text="@string/originS"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/originV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_light"
                        android:text="@string/placeholder_text"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </LinearLayout>

                <View
                    android:id="@+id/line2S"
                    android:layout_width="2dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="10dp"
                    android:background="@color/progress_bar_light_orange" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/destinationS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_light"
                        android:paddingStart="0dp"
                        android:paddingEnd="3dp"
                        android:text="@string/destinationS"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/destinationV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_light"
                        android:text="@string/placeholder_text"
                        android:textColor="#000000"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.042"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/budgetS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:fontFamily="@font/nunito_light"
                    android:text="@string/totalS"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="46dp"
                    tools:layout_editor_absoluteY="237dp" />

                <TextView
                    android:id="@+id/budgetV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_light"
                    android:text="@string/placeholder_text"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="46dp"
                    tools:layout_editor_absoluteY="237dp" />

            </LinearLayout>

            <Button
                android:id="@+id/viewSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/nunito"
                android:letterSpacing="0.03"
                android:outlineSpotShadowColor="#00FFFFFF"
                android:text="@string/view_summary_btn"
                android:textAllCaps="false"
                android:textColor="@color/light_brown"
                android:textSize="14sp"
                app:cornerRadius="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:strokeColor="@color/light_brown"
                app:strokeWidth="2dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>